Make login panel stop collapsing buttons

--- a/taskhunter_frontend/src/components/Login/Login.css
+++ b/taskhunter_frontend/src/components/Login/Login.css
@@ -22,7 +22,7 @@
 
 .login-table{
 	margin: 0px auto;
-	width: 60%;
+	width: 80%;
 }
 
 .login-heading{
